# proj311-test

./: Cargo.toml  LICENSE  README.md  build_web.sh  index.html
.github/workflows/: deploy.yml  rust.yml  tests.yml  wasm.yml
.github/workflows /: deploy.yml  wasm.yml
src/: app.rs  lib.rs  main.rs
src/panel/: file_handler.rs  logical_channels.rs  message.rs  mod.rs  panel.rs
src/panels/: file_handler.rs  logical_channels.rs  message.rs  socket_manager.rs
